[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/debug.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/hud.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.129412, 0.129412, 0.784314 )

[node name="debug" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TabContainer" parent="CenterContainer"]
margin_left = 360.0
margin_top = 340.0
margin_right = 1560.0
margin_bottom = 740.0
rect_min_size = Vector2( 1200, 400 )
custom_styles/panel = SubResource( 1 )

[node name="debug_controls" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contwave" type="CheckButton" parent="CenterContainer/Panel/debug_controls"]
margin_right = 1200.0
margin_bottom = 40.0
text = "continuous waves"

[node name="startwave" type="Button" parent="CenterContainer/Panel/debug_controls"]
margin_top = 44.0
margin_right = 1200.0
margin_bottom = 73.0
text = "start wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/debug_controls"]
margin_top = 77.0
margin_right = 1200.0
margin_bottom = 110.0

[node name="add_ammo_lab" type="Label" parent="CenterContainer/Panel/debug_controls/HBoxContainer"]
margin_top = 5.0
margin_right = 152.0
margin_bottom = 28.0
text = "add ammo by name"
valign = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/Panel/debug_controls/HBoxContainer"]
margin_left = 156.0
margin_right = 1200.0
margin_bottom = 33.0
size_flags_horizontal = 3
max_length = 12
selecting_enabled = false

[node name="debug_data" type="VBoxContainer" parent="CenterContainer/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show_data" type="CheckButton" parent="CenterContainer/Panel/debug_data"]
margin_right = 1200.0
margin_bottom = 40.0
text = "show data"

[node name="fps_view" type="CheckButton" parent="CenterContainer/Panel/debug_data"]
margin_top = 44.0
margin_right = 1200.0
margin_bottom = 84.0
text = "fps view"

[node name="ocount" type="CheckButton" parent="CenterContainer/Panel/debug_data"]
margin_top = 88.0
margin_right = 1200.0
margin_bottom = 128.0
text = "object count"

[node name="realtime" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_bottom = 220.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="realtime"]
margin_right = 120.0
margin_bottom = 23.0
text = "fps: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ocount" type="Label" parent="realtime"]
margin_top = 27.0
margin_right = 120.0
margin_bottom = 50.0
text = "objects: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="CenterContainer/Panel/debug_controls/contwave" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="CenterContainer/Panel/debug_controls/startwave" to="." method="_on_startwave_pressed"]
[connection signal="text_entered" from="CenterContainer/Panel/debug_controls/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="toggled" from="CenterContainer/Panel/debug_data/show_data" to="." method="_on_show_data_toggled"]
[connection signal="toggled" from="CenterContainer/Panel/debug_data/fps_view" to="." method="_on_fps_view_toggled"]
[connection signal="toggled" from="CenterContainer/Panel/debug_data/ocount" to="." method="_on_ocount_toggled"]
